fix homepage spacing

--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -18,16 +18,9 @@
     .head-container {}
 
     .rightside-container {
-        .experience-container {
-            padding-top: @component-spacing-small;
-        }
-
-        .projects-container {
-            padding-top: @component-spacing-small;
-        }
-
-        .footer-container {
-            padding-top: @component-spacing-small;
-        }
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+        gap: 30px;
     }
 }
